--- a/WordPress/Resources/tr.lproj/Localizable.strings
+++ b/WordPress/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-10-27 13:54:08+0000 */
+/* Translation-Revision-Date: 2021-11-09 13:54:09+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: tr */
@@ -919,6 +919,9 @@ translators: Block name. %s: The localized block name */
 /* The plugin can not be manually updated or deactivated */
 "Auto-managed on this site" = "Bu sitede otomatik yönetiliyor";
 
+/* Label indicating that a domain name registration will automatically renew */
+"Auto-renew enabled" = "Otomatik yenileme etkin";
+
 /* Discussion Settings Title
    Settings: Comments Approval settings */
 "Automatically Approve" = "Otomatik onayla";
@@ -1560,6 +1563,9 @@ translators: Block name. %s: The localized block name */
 /* Message displayed when pending a comment succeeds. */
 "Comment set to pending." = "Yorum \"beklemede\" olarak ayarlandı.";
 
+/* Hint for users to grow their audience by commenting on other blogs. */
+"Comment to start making connections." = "Bağlantı kurmaya başlamak için yorum yapın.";
+
 /* Filters Comments Notifications
    Insights 'Comments' header
    Label for number of comments.
@@ -1662,11 +1668,11 @@ translators: Block name. %s: The localized block name */
 /* Title of a Quick Start Tour */
 "Congrats on finishing Quick Start  🎉" = "Tebrikler, hızlı başlangıcı tamamladınız  🎉";
 
-/* Title on domain credit redemption success screen */
-"Congratulations" = "Tebrikler";
-
 /* Subtitle of the congratulation screen that appears when all the tasks are completed */
 "Congratulations on completing your list. A job well done." = "Tebrikler, listenizi başarıyla tamamladınız. Başarılı bir iş çıkardınız.";
+
+/* Title of domain name purchase success screen */
+"Congratulations on your purchase!" = "Satın aldığınız için tebrikler!";
 
 /* Verb. Tapping connects an account to Publicize.
    Verb. Text label. Allows the user to connect to a third-party sharing service like Facebook or Twitter. */
@@ -1686,6 +1692,9 @@ translators: Block name. %s: The localized block name */
 
 /* Instructional text appearing below a `Connect` button. The `%@` is a placeholder for the name of a third-party sharing service. */
 "Connect to automatically share your blog posts to %@" = "Blog yazılarınızı %@ ile otomatik olarak paylaşmak için bağlanın";
+
+/* A detailed message to users about growing the audience for their site through reader discover. */
+"Connect with other bloggers by following, liking and commenting on their posts." = "Gönderilerini takip ederek, beğenerek ve yorum yaparak diğer blog yazarlarıyla bağlantı kurun.";
 
 /* No comment provided by engineer. */
 "Connect your favorite social media services to automatically share new posts with friends." = "Yeni yazıları arkadaşlarınızla otomatik olarak paylaşmak için favori sosyal medya hizmetlerinize bağlanın.";
@@ -1748,8 +1757,7 @@ translators: Block name. %s: The localized block name */
 /* Displays the number of blocks, words and characters in text */
 "Content Structure\nBlocks: %li, Words: %li, Characters: %li" = "İçerik Yapısı\nBloklar: %1$li, Kelimeler: %2$li, Karakterler: %3$li";
 
-/* Action title to dismiss domain credit redemption success screen
-   Apply changes localy to single block edition in the web block editor
+/* Apply changes localy to single block edition in the web block editor
    The button title text when there is a next step for logging in or signing up.
    The default Jetpack view button title
    Title for the continue button in the What's New page. */
@@ -1811,6 +1819,12 @@ translators: Block name. %s: The localized block name */
 
 /* Message shown when site purchases API failed */
 "Could not check site purchases." = "Site alımları kontrol edilemiyor.";
+
+/* The app failed to disable notifications for the subscription */
+"Could not disable notifications" = "Bildirimler devre dışı bırakılamadı";
+
+/* The app failed to enable notifications for the subscription */
+"Could not enable notifications" = "Bildirimler etkinleştirilemedi";
 
 /* Title of a prompt. */
 "Could not follow site" = "Site takip edilemiyor";
@@ -2248,6 +2262,9 @@ translators: Block name. %s: The localized block name */
 /* Reader select interests title label text */
 "Discover and follow blogs you love" = "Sevdiğiniz blogları keşfedin ve takip edin";
 
+/* Title for button that will open up the follow topics screen. */
+"Discover blogs to follow" = "Takip edilecek blogları keşfedin";
+
 /* Button title. Tapping shows the Follow Topics screen. */
 "Discover more topics" = "Daha fazla konu keşfet";
 
@@ -2279,6 +2296,9 @@ translators: Block name. %s: The localized block name */
 /* Accessibility hint for the continue button in the Feature Announcements screen. */
 "Dismiss announcements" = "Duyuruları kapat";
 
+/* Accessibility hint for a done button that dismisses the current modal screen */
+"Dismiss screen" = "Ekranı kapat";
+
 /* Display Name label text.
    My Profile display name label
    User's Display Name */
@@ -2295,6 +2315,9 @@ translators: Block name. %s: The localized block name */
 
 /* Unconfigured stats today widget helper text */
 "Display your site stats for today here. Configure in the WordPress app in your site stats." = "Sitenizin bugünkü istatistiklerini burada görüntüleyin. WordPress uygulamasında, siteniz istatistikleri içinde yapılandırın.";
+
+/* Title for button that will open up the follow topics screen. */
+"Do it again" = "Tekrar yap";
 
 /* Accessibility label for other media items in the media collection view. The parameter is the filename file. */
 "Document: %@" = "Belge: %@";
@@ -2627,6 +2650,7 @@ translators: Block name. %s: The localized block name */
 "Empty URL" = "Boş adres";
 
 /* Button title for the enable site notifications action.
+   Button title to enable notifications for new comments
    Title of button to enable publicize. */
 "Enable" = "Etkinleştir";
 
@@ -2638,6 +2662,12 @@ translators: Block name. %s: The localized block name */
 
 /* Title for the button that will enable the site stats module. */
 "Enable Site Stats" = "Site istatistiklerini etkinleştir";
+
+/* Describes a switch component that toggles in-app notifications for a followed post. */
+"Enable in-app notifications" = "Uygulama içi bildirimleri etkinleştir";
+
+/* Hint for the action button that enables notification for new comments */
+"Enable in-app notifications?" = "Uygulama içi bildirimler etkinleştirilsin mi?";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Videolarınızdaki sesleri kaydetmek için mikrofon erişimini etkinleştir.";
@@ -2881,8 +2911,14 @@ translators: Block name. %s: The localized block name */
 /* Screen reader hint (non-imperative) about what does the site menu area selector button do. */
 "Expands to select a different menu area" = "Farklı bir menü alanı seçmek için genişler";
 
+/* Label indicating that a domain name registration has expired. */
+"Expired" = "Süresi doldu";
+
 /* Title. Indicates an expiration date. */
 "Expires on" = "Sona erme tarihi:";
+
+/* Label indicating the date on which a domain name registration will expire. The %@ placeholder will be replaced with a date at runtime. */
+"Expires on %@" = "Sona erme tarihi: %@";
 
 /* Placeholder text for the tagline of a site */
 "Explain what this site is about." = "Bu sitenin ne hakkında olduğunu açıklayın.";
@@ -3044,7 +3080,8 @@ translators: Block name. %s: The localized block name */
 /* Subtitle displayed while the server is fixing threats */
 "Fixing Threats" = "Tehditler Düzeltiliyor";
 
-/* Prompt to follow a blog.
+/* Button title. Follow the comments on a post.
+   Prompt to follow a blog.
    Verb. Button title. Follow a new blog. */
 "Follow" = "Takip et";
 
@@ -3059,6 +3096,9 @@ translators: Block name. %s: The localized block name */
 
 /* Screen title. Reader select interests title label text. */
 "Follow topics" = "Takip edilen konular";
+
+/* Guide for users to follow topics. */
+"Follow topics you're interested in and we'll find some blogs you might like." = "Siz ilgilendiğiniz konuları takip edin, biz de beğenebileceğiniz blogları bulalım.";
 
 /* Caption displayed in promotional screens shown during the login flow.
    Shown in the prologue carousel (promotional screens) during first launch. */
@@ -3101,6 +3141,9 @@ translators: Block name. %s: The localized block name */
 
 /* Label displayed to the user while loading their selected interests */
 "Following new topics..." = "Yeni konular takip ediliyor...";
+
+/* The app successfully subscribed to the comments for the post */
+"Following this conversation" = "Bu konuşmanın ardından";
 
 /* Filters Follows Notifications */
 "Follows" = "Takip edilenler";
@@ -3504,6 +3547,12 @@ translators: Block name. %s: The localized block name */
 /* Title of button to enable publicize. */
 "In order to share your published posts to your social media you need to enable the Publicize module." = "Yayınladığınız gönderilerinizi sosyal medyanızda paylaşabilmeniz için Duyuru modülünü etkinleştirmeniz gerekmektedir.";
 
+/* The app successfully disabled notifications for the subscription */
+"In-app notifications disabled" = "Uygulama içi bildirimler devre dışı bırakıldı";
+
+/* The app successfully enabled notifications for the subscription */
+"In-app notifications enabled" = "Uygulama içi bildirimler etkinleştirildi";
+
 /* Describes a status of a plugin */
 "Inactive" = "Pasif";
 
@@ -3742,6 +3791,9 @@ translators: Block name. %s: The localized block name */
 
 /* A detailed message to users indicating that they've set up blogging reminders. */
 "Keep blogging and check back to see visitors arriving at your site." = "Blog yazmaya devam edin ve sitenize gelen ziyaretçileri görmek için tekrar kontrol edin.";
+
+/* A detailed message to users indicating that they've set up reader discover. */
+"Keep going! Liking and commenting is a good way to build a network. Go to Reader to find more posts." = "Devam edin! Beğenmek ve yorum yapmak, ağ oluşturmanın iyi bir yoludur. Daha fazla gönderi bulmak için Okuyucu'ya gidin.";
 
 /* Description of a Quick Start Tour */
 "Keep up to date on your site’s performance." = "Sitenizin performansıyla ilgili güncel bilgiler edinin.";
@@ -4373,6 +4425,9 @@ translators: Block name. %s: The localized block name */
 /* Describes a status of a plugin */
 "Needs Update" = "Güncellenmesi gerekiyor";
 
+/* Label indicating that a domain name registration has no expiry date. */
+"Never expires" = "Asla hizmet dışı kalmaz";
+
 /* Header of section in Plugin Directory showing newest plugins */
 "New" = "Yeni";
 
@@ -4409,7 +4464,8 @@ translators: Block name. %s: The localized block name */
 /* Sort Order */
 "Newest first" = "İlk en yeni";
 
-/* Next action on share extension editor screen.
+/* Next action on comment moderation snackbar.
+   Next action on share extension editor screen.
    Next screen button title
    Title of a button.
    Title of a button. The text should be capitalized. */
@@ -4842,6 +4898,9 @@ translators: Block name. %s: The localized block name */
 
 /* Menus label for checkbox when editig item as a link. */
 "Open link in new window\/tab" = "Bağlantıyı yeni pencerede\/sekmede aç";
+
+/* VoiceOver hint. Informs the user that the button allows the user to access post subscription settings. */
+"Open subscription settings for the post" = "Gönderi için abonelik ayarlarını açın";
 
 /* Accessibility hint the Me button in My Site. */
 "Open the Me Section" = "Ben bölümünü aç";
@@ -5707,6 +5766,9 @@ translators: Block name. %s: The localized block name */
 /* Explanation of what will happen if the user confirms this alert. */
 "Removing Next Steps will hide all tours on this site. This action cannot be undone." = "Sıradaki Adımlar kaldırıldığında bu sitedeki tüm turlar gizlenir. Bu eylem geri alınamaz.";
 
+/* Label indicating the date on which a domain name registration will be renewed. The %@ placeholder will be replaced with a date at runtime. */
+"Renews on %@" = "Yenilenme tarihi: %@";
+
 /* Button to confirm the replacement of a featured image. */
 "Replace" = "Değiştir";
 
@@ -6558,9 +6620,6 @@ translators: Block name. %s: The localized block name */
    Title for the error view when the scan start has failed */
 "Something went wrong" = "Bir şeyler yanlış gitti";
 
-/* Alert message when `JetpackSiteRef` cannot be initialized from a blog during domain credit redemption. */
-"Something went wrong, please try again." = "Bir şeyler ters gitti. Lütfen tekrar deneyin.";
-
 /* This prompt is displayed when the user attempts to play a video in the editor but for some reason we are unable to retrieve from the server. */
 "Something went wrong. Please check your connectivity and try again." = "Birşeyler yanlış gitti. Lütfen bağlantınızı kontrol edin ve tekrar deneyin.";
 
@@ -6862,9 +6921,6 @@ translators: Block name. %s: The localized block name */
 
 /* No comment provided by engineer. */
 "Tap here to show help" = "Yardımı görüntülemek için buraya dokunun";
-
-/* No comment provided by engineer. */
-"Tap to add content" = "İçerik eklemek için dokunun";
 
 /* This is a status indicator on the editor */
 "Tap to cancel uploading." = "Yüklemeyi iptal etmek için dokunun.";
@@ -7655,9 +7711,6 @@ translators: Block name. %s: The localized block name */
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Belirtilen adresteki WordPress sitesi okunamadı. 'Yardım lazım mı?' tuşuna tıklayarak SSS'i görüntüleyebilirsiniz.";
 
-/* Alert title when `JetpackSiteRef` cannot be initialized from a blog during domain credit redemption. */
-"Unable to register domain" = "Alan adı kaydedilemiyor";
-
 /* Title for the Jetpack Restore Failed message. */
 "Unable to restore your site" = "Siteniz geri yüklenemiyor";
 
@@ -7738,6 +7791,7 @@ translators: Block name. %s: The localized block name */
 "Underline" = "Altı çizili";
 
 /* Button in the notification presented in Reader when a post removed from saved for later
+   Button title. Reverts the previous notification operation
    Revert an operation
    The title of an 'undo' button. Tapping the button moves a trashed page out of the trash folder.
    The title of an 'undo' button. Tapping the button moves a trashed post out of the trash folder.
@@ -7750,6 +7804,9 @@ translators: Block name. %s: The localized block name */
 /* Accessibility label for unfollowing a site
    Accessibility label for unfollowing a tag */
 "Unfollow %@" = "%@ takibini bırak";
+
+/* Title for a button that unsubscribes the user from the post. */
+"Unfollow conversation" = "Görüşmeyi takip etmeyi bırak";
 
 /* Verb. Button title. The user is following the comments on a post. */
 "Unfollow conversation by email" = "E-posta ile konuşma takip etmeyi devre dışı bırak";
@@ -8811,6 +8868,9 @@ translators: Block name. %s: The localized block name */
 /* Error message displayed when unable to close user account due to being unauthorized. */
 "You're not authorized to close the account." = "Hesabı kapatma yetkiniz yok.";
 
+/* A hint to users that they've set up reader discover. */
+"You've connected with other blogs" = "Diğer bloglarla bağlantı kurdunuz";
+
 /* Message displayed on a post's card when the post has unsaved changes */
 "You've made unsaved changes to this post" = "Bu iletide kaydedilmeyen değişiklikler yaptınız";
 
@@ -8852,6 +8912,9 @@ translators: Block name. %s: The localized block name */
 
 /* Error message when picked media cannot be imported into stories. */
 "Your media could not be exported. If the problem persists you can contact us via the Me > Help & Support screen." = "Medyanız dışa aktarılamadı. If the problem persists you can contact us via the Me > Yardım ve Destek ekranı.";
+
+/* Details about recently acquired domain on domain credit redemption success screen */
+"Your new domain %@ is being set up. It may take up to 30 minutes for your domain to start working." = "Yeni alan adınız %@ ayarlanıyor. Alan adınızın çalışmaya başlaması 30 dakika kadar sürebilir.";
 
 /* shown in promotional screens during first launch */
 "Your notifications travel with you — see comments and likes as they happen." = "Bildirimleriniz sizinle birlikte geziyor; yorumları ve beğenileri gerçekleştikleri sırada görün.";
@@ -8918,6 +8981,12 @@ translators: Block name. %s: The localized block name */
 
 /* The default Jetpack view message */
 "Your website credentials will not be stored and are used only for the purpose of installing Jetpack." = "Web sitenizin kimlik bilgileri depolanmayacak ve yalnızca Jetpack’i güvenli bir şekilde yüklemek amacıyla kullanılacaktır.";
+
+/* Describes the expected behavior when the user disables in-app notifications in Reader Comments. */
+"You’re following this conversation. You will receive an email and a notification whenever a new comment is made." = "Bu konuşmayı takip ediyorsunuz. Yeni bir yorum yapıldığında e-posta ve bildirim alacaksınız.";
+
+/* Describes the expected behavior when the user enables in-app notifications in Reader Comments. */
+"You’re following this conversation. You will receive an email whenever a new comment is made." = "Bu konuşmayı takip ediyorsunuz. Yeni bir yorum yapıldığında e-posta alacaksınız.";
 
 /* Popup content about why this post is being opened in block editor */
 "You’re now using the block editor for new pages — great! If you’d like to change to the classic editor, go to ‘My Site’ > ‘Site Settings’." = "Şimdi yeni sayfalar için blok düzenleyiciyi kullanıyorsunuz, harika! Klasik düzenleyicide değişiklik yapmak istiyorsanız, Sitem > Site Ayarları'na gidin.";
@@ -9067,9 +9136,6 @@ translators: Block name. %s: The localized block name */
 
 /* This is a comma separated list of keywords used for spotlight indexing of the 'My Sites' tab. */
 "wordpress, sites, site, blogs, blog" = "wordpress, siteler, site, bloglar, blog";
-
-/* Details about recently acquired domain on domain credit redemption success screen */
-"your new domain %@ is being set up. Your site is doing somersaults in excitement!" = "yeni alan adınız %@ ayarlanıyor. Siteniz sevinçten taklalar atıyor!";
 
 /* Placeholder for site url, if the url is unknown.Presented when logging in with a site address that does not have a valid Jetpack installation.The error would read: to use this app for your site you'll need... */
 "your site" = "siteniz";
